# MAGPO

./: Dockerfile  README.md  pyproject.toml
docker/: Dockerfile.remyx
experiment_data/: params.csv
mava/: evaluator.py  types.py
mava/configs/arch/: anakin.yaml  sebulba.yaml
mava/configs/default/: ff_hasac.yaml  ff_ippo.yaml  ff_ippo_sebulba.yaml  ff_isac.yaml  ff_mappo.yaml  ff_mappo_sebulba.yaml  ff_masac.yaml  ff_sable.yaml  ff_sable_sebulba.yaml  mat.yaml  rec_happo.yaml  rec_ippo.yaml  rec_ippo_sebulba.yaml  rec_iql.yaml  rec_iql_sebulba.yaml  rec_magpo.yaml  rec_mappo.yaml  rec_mappo_sebulba.yaml  rec_sable.yaml  rec_sable_sebulba.yaml
mava/configs/env/: connector.yaml  coordsum.yaml  lbf.yaml  mpe.yaml  smaclite_gym.yaml  vector-connector.yaml
mava/configs/env/scenario/: 3x10-30.yaml  3x30-50.yaml  5x20-80.yaml  8x15-100.yaml  con-10x10x10a.yaml  con-15x15x23a.yaml  con-5x5x3a.yaml  con-7x7x5a.yaml  large-4ag-hard.yaml  large-4ag.yaml  large-8ag-hard.yaml  large-8ag.yaml  medium-4ag-hard.yaml  medium-4ag.yaml  medium-6ag.yaml  small-4ag-hard.yaml  tiny-2ag-hard.yaml  tiny-4ag-hard.yaml  xlarge-4ag-hard.yaml  xlarge-4ag.yaml
mava/configs/logger/: logger.yaml
mava/configs/network/: ff_retention.yaml  rec_retention.yaml  rnn_graph.yaml  transformer.yaml
mava/configs/system/gpo/: rec_magpo.yaml
mava/configs/system/ppo/: rec_happo.yaml
mava/configs/system/q_learning/: rec_iql.yaml
mava/configs/system/sable/: ff_sable.yaml
mava/coordsum/: __init__.py  env.py
mava/networks/: attention.py  base.py  gnn.py  heads.py  mat_network.py  retention.py  sable_network.py
mava/networks/utils/sable/: __init__.py  decode.py  encode.py  get_init_hstates.py  positional_encoding.py
mava/systems/gpo/: __init__.py  types.py
mava/systems/gpo/anakin/: rec_magpo.py
mava/systems/mat/: README.md  types.py
mava/systems/mat/anakin/: mat.py
mava/systems/ppo/: README.md  types.py
mava/systems/ppo/anakin/: ff_ippo.py  ff_mappo.py  rec_happo.py  rec_ippo.py  rec_mappo.py
mava/systems/ppo/sebulba/: ff_ippo.py  ff_mappo.py  rec_ippo.py  rec_mappo.py
mava/systems/q_learning/: README.md  types.py
mava/systems/q_learning/anakin/: rec_iql.py  rec_qmix.py
mava/systems/q_learning/sebulba/: rec_iql.py
mava/systems/sable/: README.md  types.py
mava/systems/sable/anakin/: ff_sable.py  rec_sable.py
mava/systems/sable/sebulba/: ff_sable.py  rec_sable.py
mava/systems/sac/: README.md
mava/systems/sac/anakin/: ff_hasac.py  ff_isac.py  ff_masac.py
mava/utils/: checkpointing.py  config.py  logger.py  make_env.py  multistep.py  network_utils.py
mava/utils/graph/: gnn_utils.py
mava/utils/sebulba/: pipelines.py  rate_limiters.py  utils.py
mava/wrappers/: __init__.py  episode_metrics.py  gigastep.py  graph_wrapper.py  gym.py  jaxmarl.py  jumanji.py  matrax.py  observation.py
